--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -1,3 +1,6 @@
+central.backup.short = Create a backup of the StackRox database and certificates.
+central.backup.long = Create a backup of the StackRox database, certificates and keys (.zip file). You can use it to restore central service and the database.
+
 central.cert.short = Download certificate chain for the Central service.
 central.cert.long = Download certificate chain for the Central service or its associated ingress or load balancer, if one exists.
 
