--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-scc.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-scc.yaml
@@ -1,6 +1,6 @@
 {{- include "srox.init" . -}}
 
-{{- if and ._rox.env.openshift ._rox.admissionControl.enable }}
+{{- if ._rox.env.openshift }}
 apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
 metadata:
