--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -1,6 +1,5 @@
 {{- include "srox.init" . -}}
 
-{{- if ._rox.admissionControl.enable }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -153,6 +152,7 @@ metadata:
   annotations:
     {{- include "srox.annotations" (list . "validatingwebhookconfiguration" "stackrox") | nindent 4 }}
 webhooks:
+  {{- if or ._rox.admissionControl.listenOnCreates ._rox.admissionControl.listenOnUpdates }}
   - name: policyeval.stackrox.io
     rules:
       - apiGroups:
@@ -160,7 +160,9 @@ webhooks:
         apiVersions:
         - '*'
         operations:
+        {{- if ._rox.admissionControl.listenOnCreates }}
         - CREATE
+        {{- end }}
         {{- if ._rox.admissionControl.listenOnUpdates }}
         - UPDATE
         {{- end }}
@@ -192,4 +194,33 @@ webhooks:
         namespace: {{ ._rox._namespace }}
         name: admission-control
         path: /validate
-{{- end }}
+  {{- end}}
+  - name: k8sevents.stackrox.io
+    rules:
+      - apiGroups:
+        - '*'
+        apiVersions:
+        - '*'
+        operations:
+        - CONNECT
+        resources:
+          - pods
+          - pods/attach
+          - pods/exec
+          - portforward/create
+    namespaceSelector:
+      matchExpressions:
+        - key: namespace.metadata.stackrox.io/name
+          operator: NotIn
+          values:
+            - stackrox
+            - kube-system
+            - kube-public
+            - istio-system
+    failurePolicy: Ignore
+    clientConfig:
+      caBundle: {{ required "The 'ca.cert' config option MUST be set to StackRox's Service CA certificate in order for the admission controller to be usable" ._rox.ca._cert | b64enc }}
+      service:
+        namespace: {{ ._rox._namespace }}
+        name: admission-control
+        path: /events
