Fix feature flag name (earlier one was removed in master) (#7281)

--- a/pkg/helmconfig/testdata/helm-chart-configurations/simple.yaml
+++ b/pkg/helmconfig/testdata/helm-chart-configurations/simple.yaml
@@ -3,10 +3,10 @@ helmManaged: true
 centralEndpoint: central.stackrox:443
 
 admissionControl:
-  enable: true
+  listenOnCreates: true
   listenOnUpdates: true
   dynamic:
-    enforce: true
+    enforceOnCreates: true
     scanInline: true
     disableBypass: true
     timeout: 3
