UI: upgrade to react-scripts 4 (#7228)
Also update any related dependencies and make code changes necessary to satisfy new ESLint rules.

--- a/ui/apps/platform/tsconfig.json
+++ b/ui/apps/platform/tsconfig.json
@@ -20,10 +20,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/**/*",
     "setupTests.js"
-  ],
+  ]
 }
