--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -97,7 +97,7 @@
         "start": "yarn tailwind && HTTPS=true react-scripts start",
         "start:watch": "npm-run-all --parallel watch:tailwind watch:react",
         "start:coverage": "yarn tailwind && HTTPS=true react-scripts -r @cypress/instrument-cra start",
-        "build": "yarn tailwind && GENERATE_SOURCEMAP=false react-scripts build",
+        "build": "yarn tailwind && CI=false GENERATE_SOURCEMAP=false react-scripts build",
         "test": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports react-scripts test --coverage --reporters=default --reporters=jest-junit",
         "test-watch": "react-scripts test",
         "lint": "yarn tailwind && NODE_PATH=src eslint --quiet --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
@@ -119,15 +119,15 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.2",
-        "@cypress/code-coverage": "^3.8.4",
-        "@cypress/instrument-cra": "^1.3.1",
+        "@babel/core": "7.12.3",
+        "@cypress/code-coverage": "^3.9.0",
+        "@cypress/instrument-cra": "^1.4.0",
         "@stackrox/tailwind-config": "*",
         "@storybook/addon-info": "^5.3.19",
         "@storybook/react": "^5.3.19",
         "@testing-library/jest-dom": "^5.11.8",
-        "@testing-library/react": "^9.1.4",
-        "@testing-library/react-hooks": "^3.4.2",
+        "@testing-library/react": "^11.2.2",
+        "@testing-library/react-hooks": "^3.7.0",
         "@types/jest": "^26.0.19",
         "@types/lodash": "^4.14.167",
         "@types/node": "^14.14.20",
@@ -138,21 +138,22 @@
         "@types/react-redux": "^7.1.15",
         "cypress": "^5.0.0",
         "cypress-file-upload": "^4.1.1",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-airbnb-typescript": "^7.2.1",
-        "eslint-config-prettier": "6.11.0",
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^12.0.0",
+        "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-cypress": "^2.11.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.1.3",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.3.0",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^3.0.0",
-        "eslint-plugin-testing-library": "3.8.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-testing-library": "^3.10.1",
         "http-proxy-middleware": "^1.0.6",
         "istanbul-lib-coverage": "^3.0.0",
-        "jest-junit": "^10.0.0",
+        "jest-junit": "^12.0.0",
+        "levenary": "^1.1.1",
         "mocha": "^8.2.1",
         "mocha-junit-reporter": "^2.0.0",
         "mocha-multi-reporters": "^1.5.1",
@@ -162,7 +163,7 @@
         "postcss-cli": "^7.1.2",
         "prettier": "^2.2.1",
         "randomstring": "^1.1.5",
-        "react-scripts": "^3.4.4",
+        "react-scripts": "^4.0.1",
         "react-test-renderer": "^17.0.1",
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
