--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
         "node": ">=10.22.0"
     },
     "scripts": {
+        "postinstall": "./scripts/patch-deps.sh",
         "lerna:version": "lerna version --no-git-tag-version --no-push --yes",
         "postlerna:version": "chalk bold red 'Please commit the changes and create a PR!'",
         "prelerna:publish": "if [ ! \"$CI\" = true ]; then chalk bold red 'Not expected to be used outside of CI context.'; exit 1; fi",
@@ -43,9 +44,7 @@
     },
     "devDependencies": {
         "chalk-cli": "^4.1.0",
-        "lerna": "^3.22.1"
-    },
-    "dependencies": {
-        "@types/lodash.get": "^4.4.6"
+        "lerna": "^3.22.1",
+        "postinstall-postinstall": "^2.1.0"
     }
 }
