--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -51,35 +51,36 @@
         "yup": "^0.32.8"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.1",
+        "@babel/core": "7.12.3",
         "@stackrox/tailwind-config": "^0.1.0",
         "@storybook/addon-actions": "6.1.10",
         "@storybook/addon-essentials": "6.1.10",
         "@storybook/addon-links": "6.1.10",
         "@storybook/react": "6.1.10",
         "@testing-library/jest-dom": "^5.11.8",
-        "@testing-library/react": "^10.4.9",
+        "@testing-library/react": "^11.2.2",
         "@types/lodash": "^4.14.167",
+        "@types/lodash.get": "^4.4.6",
         "@types/node": "^14.14.20",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.24.0",
-        "@typescript-eslint/parser": "^2.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
         "babel-loader": "^8.1.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-typescript": "^7.2.1",
-        "eslint-config-prettier": "6.11.0",
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb-typescript": "^12.0.0",
+        "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.1.3",
-        "eslint-plugin-jest-dom": "^2.1.0",
+        "eslint-plugin-jest-dom": "^3.6.5",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.3.0",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^3.0.0",
-        "eslint-plugin-testing-library": "3.8.0",
-        "jest": "^24.9.0",
-        "jest-junit": "^10.0.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-testing-library": "^3.10.1",
+        "jest": "^26.6.3",
+        "jest-junit": "^12.0.0",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^7.1.2",
         "prettier": "^2.2.1",
@@ -87,7 +88,7 @@
         "react-dom": "^17.0.1",
         "react-is": "^17.0.1",
         "tailwindcss": "^1.8.10",
-        "ts-jest": "^24.3.0",
+        "ts-jest": "^26.4.4",
         "typescript": "^3.9.5"
     }
 }
