Fix compatibility translation of environment variables (#7296)

--- a/image/templates/helm/stackrox-secured-cluster/internal/compatibility-translation.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/compatibility-translation.yaml
@@ -138,6 +138,6 @@ config:
 envVars: |
   customize:
     envVars:
-      {{- range $_, $v := .rawValue -}}
+      {{- range $_, $v := .rawValue }}
       {{ quote $v.name }}: {{ quote $v.value }}
       {{- end }}
