--- a/ui/packages/ui-components/tsconfig.json
+++ b/ui/packages/ui-components/tsconfig.json
@@ -16,7 +16,8 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "react"
+        "jsx": "react-jsx",
+        "noFallthroughCasesInSwitch": true
     },
     "include": ["src/**/*"],
     "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*.stories.tsx"]
