--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -123,8 +123,9 @@
         "@cypress/code-coverage": "^3.9.0",
         "@cypress/instrument-cra": "^1.4.0",
         "@stackrox/tailwind-config": "*",
-        "@storybook/addon-info": "^5.3.19",
-        "@storybook/react": "^5.3.19",
+        "@storybook/addon-essentials": "^6.1.14",
+        "@storybook/preset-create-react-app": "^3.1.5",
+        "@storybook/react": "^6.1.14",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/react-hooks": "^5.0.0",
@@ -167,7 +168,6 @@
         "react-test-renderer": "^17.0.1",
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
-        "storybook-addon-themes": "^5.5.0",
         "tailwindcss": "^1.8.10",
         "typescript": "^4.1.3"
     },
