ROX-6279 Roxctl support for init bundles (#7309)
Basic support for init bundles in roxctl

--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -37,6 +37,18 @@ central.generate.k8s.long = Generate the required YAML configuration files to de
 central.generate.openshift.short = Generate the required YAML configuration files to deploy StackRox Central into an OpenShift cluster.
 central.generate.openshift.long = Generate the required YAML configuration files to deploy StackRox Central into an OpenShift cluster.
 
+central.init-bundles.short = Commands for managing cluster init bundle
+central.init-bundles.long =
+
+central.init-bundles.generate.short = Generate a new cluster init bundle
+central.init-bundles.generate.long = Generate a new init bundle for bootstrapping a new StackRox secured cluster
+
+central.init-bundles.list.short = List cluster init bundles
+central.init-bundles.list.long = List all previously generated init bundles for bootstrapping new StackRox secured clusters
+
+central.init-bundles.revoke.short = Revoke a cluster init bundle
+central.init-bundles.revoke.long = Revoke an init bundle for bootstrapping new StackRox secured clusters
+
 # Intentionally empty values
 central.generate.k8s.hostpath.short =
 central.generate.k8s.hostpath.long =
