--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -137,6 +137,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-redux": "^7.1.15",
+        "autoprefixer": "^10.2.3",
         "cypress": "^5.0.0",
         "cypress-file-upload": "^4.1.1",
         "eslint": "^7.17.0",
@@ -161,14 +162,15 @@
         "node-fetch": "^2.6.1",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
-        "postcss-cli": "^7.1.2",
+        "postcss": "^8.2.4",
+        "postcss-cli": "^8.3.1",
         "prettier": "^2.2.1",
         "randomstring": "^1.1.5",
         "react-scripts": "^4.0.1",
         "react-test-renderer": "^17.0.1",
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
-        "tailwindcss": "^1.8.10",
+        "tailwindcss": "^2.0.2",
         "typescript": "^4.1.3"
     },
     "browserslist": [
