--- a/ui/packages/tailwind-config/package.json
+++ b/ui/packages/tailwind-config/package.json
@@ -23,10 +23,12 @@
         "prepublishOnly": "yarn clean && yarn build"
     },
     "dependencies": {
-        "@tailwindcss/custom-forms": "^0.2.1"
+        "@tailwindcss/forms": "^0.2.1"
     },
     "devDependencies": {
-        "postcss-cli": "^7.1.2",
-        "tailwindcss": "^1.8.10"
+        "autoprefixer": "^10.2.3",
+        "postcss": "^8.2.4",
+        "postcss-cli": "^8.3.1",
+        "tailwindcss": "^2.0.2"
     }
 }
