--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -65,6 +65,7 @@
         "@types/react-dom": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^4.13.0",
         "@typescript-eslint/parser": "^4.13.0",
+        "autoprefixer": "^10.2.3",
         "babel-loader": "^8.1.0",
         "eslint": "^7.17.0",
         "eslint-config-airbnb-typescript": "^12.0.0",
@@ -81,12 +82,13 @@
         "jest": "^26.6.3",
         "jest-junit": "^12.0.0",
         "npm-run-all": "^4.1.5",
-        "postcss-cli": "^7.1.2",
+        "postcss": "^8.2.4",
+        "postcss-cli": "^8.3.1",
         "prettier": "^2.2.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-is": "^17.0.1",
-        "tailwindcss": "^1.8.10",
+        "tailwindcss": "^2.0.2",
         "ts-jest": "^26.4.4",
         "typescript": "^4.1.3"
     }
