Add new license config for upgrade tests in CI (#7341)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3509,7 +3509,7 @@ jobs:
       - run:
           name: Setup CI License
           command: |
-            ROX_LICENSE_KEY="$(licenses/ci.sh)"
+            ROX_LICENSE_KEY="$(licenses/upgrade.sh)"
             cci-export ROX_LICENSE_KEY "$ROX_LICENSE_KEY"
 
       - run:
