ROX-6357: Add a flag to control the deployment of the exec/pf webhook (#7363)

--- a/image/templates/helm/stackrox-secured-cluster/internal/compatibility-translation.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/compatibility-translation.yaml
@@ -87,6 +87,9 @@ config:
     listenOnUpdates: |
       admissionControl:
         listenOnUpdates: {{ .value }}
+    listenOnEvents: |
+      admissionControl:
+        listenOnEvents: {{ .value }}
     enableService: |
       admissionControl:
         dynamic:
