--- a/pkg/helmconfig/testdata/helm-chart-configurations/simple.yaml
+++ b/pkg/helmconfig/testdata/helm-chart-configurations/simple.yaml
@@ -5,6 +5,7 @@ centralEndpoint: central.stackrox:443
 admissionControl:
   listenOnCreates: true
   listenOnUpdates: true
+  listenOnEvents: true
   dynamic:
     enforceOnCreates: true
     scanInline: true
