--- a/qa-tests-backend/helm/values.openshift.yaml
+++ b/qa-tests-backend/helm/values.openshift.yaml
@@ -19,6 +19,7 @@ config:
   admissionControl:
     createService: true
     listenOnUpdates: true
+    listenOnEvents: false
     enableService: false
     enforceOnUpdates: false
     scanInline: false
