ROX-6159: Deprecate `Policy.whitelists` in favor of `Policy.exclusions` (#7284)

--- a/ui/apps/platform/cypress/fixtures/alerts/alertWithEmptyContainerConfig.json
+++ b/ui/apps/platform/cypress/fixtures/alerts/alertWithEmptyContainerConfig.json
@@ -29,7 +29,7 @@
     },
     "privilegePolicy": null,
     "configurationPolicy": null,
-    "whitelists": []
+    "exclusions": []
   },
   "deployment": {
     "id": "e841ea9b-6a96-11e8-b4ce-42010a8a01d4",
