ROX-6340 Create image pull secrets in secured-cluster-services Helm chart (#7359)
Generate image pull secrets in secured-cluster-services Helm chart

--- a/image/templates/helm/stackrox-secured-cluster/internal/expandables.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/expandables.yaml
@@ -1,3 +1,12 @@
+imagePullSecrets:
+  username: true
+  password: true
+mainImagePullSecrets:
+  username: true
+  password: true
+collectorImagePullSecrets:
+  username: true
+  password: true
 ca:
   cert: true
 sensor:
