Helmtest: validate against k8s schemas (#7407)

--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/env.test.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/env.test.yaml
@@ -1,21 +1,31 @@
+server:
+  availableSchemas:
+  - openshift-4.1.0
 tests:
-- name: "OpenShift resources should be created with env.openshift=true"
-  set:
-    env.openshift: true
+- name: "OpenShift resources should be created"
   expect: |
     .securitycontextconstraints.sensor != null
     .securitycontextconstraints.collector != null
     .securitycontextconstraints["admission-control"] != null
     envVars(.deployments.sensor; "sensor")["ROX_OPENSHIFT_API"] == "true"
+  tests:
+  - name: "on an OpenShift server"
+    server:
+      visibleSchemas:
+      - openshift-4.1.0
+  - name: "with env.openshift=true"
+    set:
+      env.openshift: true
 
-- name: "OpenShift resources should not be created by default"
+- name: "OpenShift resources should not be created"
   expect: |
     .securitycontextconstraints == null
     envVars(.deployments.sensor; "sensor")["ROX_OPENSHIFT_API"] != "true"
-
-- name: "OpenShift resources should not be created with env.openshift=false"
-  set:
-    env.openshift: false
-  expect: |
-    .securitycontextconstraints == null
-    envVars(.deployments.sensor; "sensor")["ROX_OPENSHIFT_API"] != "true"
+  tests:
+  - name: "on a non-OpenShift server"
+  - name: "with env.openshift=false"
+    server:
+      visibleSchemas:
+      - openshift-4.1.0
+    set:
+      env.openshift: false
