--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -58,6 +58,7 @@
         "@storybook/react": "^6.1.15",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
+        "@testing-library/user-event": "^12.6.2",
         "@types/lodash": "^4.14.168",
         "@types/lodash.get": "^4.4.6",
         "@types/node": "^14.14.22",
