--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2232,6 +2232,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - AUTH0_SUPPORT: false
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3010,6 +3011,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3300,6 +3302,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3371,6 +3374,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
@@ -3402,6 +3406,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
@@ -3439,6 +3444,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3476,6 +3482,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4019,6 +4026,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4047,6 +4055,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4072,6 +4081,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -4170,6 +4180,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4287,10 +4298,10 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
