[ROX-6298, ROX-6379] Node scanning migration for scanners and dackbox (#7403)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3502,6 +3502,7 @@ jobs:
     environment:
       - STORAGE: pvc
       - LOAD_BALANCER: lb
+      - ROX_HOST_SCANNING: true
 
     steps:
       - checkout
