No longer accept empty sequences in Helmtest (#7427)

--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/suite.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/suite.yaml
@@ -6,7 +6,7 @@ defs: |
     container(obj; container) | .env | from_entries;
 
   def verifyNamespace(ns):
-    .objects[].metadata | select(.namespace and .namespace != ns) | assertNotExist;
+    [.objects[].metadata | select(.namespace and .namespace != ns)] | assertThat(length == 0);
 
   def verifyCentralEndpoint(ep):
     [
