Modified migration to add a feature flag check and changes to avoid updating the bucket inside ForEach (#7422)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3503,6 +3503,7 @@ jobs:
       - STORAGE: pvc
       - LOAD_BALANCER: lb
       - ROX_HOST_SCANNING: true
+      - ROX_K8S_EVENTS_DETECTION: true
 
     steps:
       - checkout
