ROX-6426 Make sure TLS secrets are not overwritten with empty strings (#7429)

--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/suite.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/suite.yaml
@@ -30,3 +30,6 @@ values:
   clusterName: "testcluster"
   imagePullSecrets:
     allowNone: true
+  createSecrets: false
+  ca:
+    cert: "DUMMY CA CERTIFICATE"
