--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/env.test.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/env.test.yaml
@@ -13,9 +13,13 @@ tests:
     server:
       visibleSchemas:
       - openshift-4.1.0
+    expect: |
+      .notes | assertThat(contains("we have inferred that you are deploying into an OpenShift cluster"))
   - name: "with env.openshift=true"
     set:
       env.openshift: true
+    expect: |
+      .notes | assertThat(contains("we have inferred that you are deploying into an OpenShift cluster") | not)
 
 - name: "OpenShift resources should not be created"
   expect: |
