--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,9 @@
         "deploy-local": "../deploy/k8s/deploy-local.sh",
         "forward": "../scripts/port-forward-ui.sh"
     },
+    "resolutions": {
+        "@typescript-eslint/parser": "^4.14.1"
+    },
     "devDependencies": {
         "chalk-cli": "^4.1.0",
         "lerna": "^3.22.1",
